plang/testing/logs/false-incorrect/184/program184.p.p
etOA i9sx Kkxq8 jf :- y (KGo), h (Cf6) (ZF5) aq (YUu); mO8, uQ iz (qoZxn) XVsh; (gPka); eX OZAX1 (tyGg (pTyY giM6 (i) D CHTK) (hbq5) (JO)) Z (kxte (q1C41 F GF (Os) x) (Jb) (ReRp) Y4Hv), pMelF UARgi Or, v sOt (r4upf xADy); w71D (Zn) cN; uj n KRcYP; op08 MSn a (uw0Ry (Wj0t) Ht3x6) DR0R; z (lLTm6 (lS) (c7JVe (A0Xw8)) gt (x2sa q4Ci Wjuh)) sa, mwaAL (lLyh zSSH FDVl (p (EW) XC (hKwp (s B5 dkf) NG708 (pMTZ (b797Z rbkV (L9X) (Cnx)) (YENKF) UK))) e) S (IV).
o1u (I) Nn.
iTS yE7PD OCzW (Z1WY4).


p1 Z81 (KyVc) (WJ5ap) :- jC Y2T (frt Os670 (fMH (o (b) (Q1) (v e7LFa)) sgzS5 (fgI5p (LB) L1bs7 vejk (D))) (IsP) (rU (kUJ2X pc5 (yI exM4x) (zMNB j7CU ZEu8 a5ry) pRZSX) (CiC7))), (plzp5); har4 (y3) (PN) Q3W; wt (Mhaac) G8 CzXbc, (sd IF R8J9V; oc (QvF) (BO)); vt Z, cOB lp (mtHf).

fz4wN :- ((nIp y52 c4RGQ (Be))), gGeev (CjPP) (jXv Az0e) (d9), ylwGA (nl1A G9Pp (dkuhG jzE (hOd (Q) N LSbI (niZm JF (DaZaJ)))) (KSnrS) (lg (I9P8r) d1Bhk (a1Fzz le9f (gSrn uyO5 (QcW) Sv) GOfp))) PWWFb; (id (e icp (I)) (WH6ty)); xq h0D Rh; ez; jC (wDzDf (rxcz1 (RPh) (FBw)) (nv) H) (Tni) pAtQ; d (KXxek) (o7 (Y) YrA) x mq, (lFLw (lcOb X1N (hf) oES) Z p qtO6, tAXr (nRURX) (EA2tN); aBfp (F) WU (Xu)), x vX; eS (sR1LO) yJR5Z.

knH (an JxJrv lku3Z) (LLv) :- (((iKDHM OIy (Slf) zia19 zqHNH), (zE (yO4ep ey rJ2Iu) LwO), veaP5 (i) Wvvz (I) (LwG); t)).


iPMT (w Q W0Lw (RAIGH) (cN3XD Ej (AQ))).

s TCrWg (OG) (zk SM) :- ((eLf3 w (S) (gv (bFZ x) H))).
jY1C (o (yB A (Q93) mAv (U6SP)) (ZS) Y5B1) (Q).

tV (t jcQ (f6 (XYa6g) (U) (mPqlK (yeqt (pLtL (T) (xI9L4 oD (MWVA0) (v (MlD) Mdn) m) epS) Fesbf) (ME) EZ (DZ)) jWm)).
uNiK2 JqR.
? gty hsv fqW (zie (SJdPo) (m2Vx) TL (az (W) (zkvs6 bdm kzS))).
